--- a/BaseballStats.WebApi/appsettings.json
+++ b/BaseballStats.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Baseball;Username=postgres;Password=wasd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
