Add supabase connection string

--- a/BaseballStats.WebApi/appsettings.json
+++ b/BaseballStats.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Baseball;Username=postgres;Password=wasd"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Baseball;Username=postgres;Password=wasd",
+    "SupabaseConnection": "User Id=postgres.jtqpbsktmybgzxqujjsf; Password=yp4nBXaCMOwKpd1q; Server=aws-0-us-west-1.pooler.supabase.com; Port=6543; Database=postgres"
   },
   "Logging": {
     "LogLevel": {
