--- a/BaseballStats.Application/BaseballStats.Application.csproj
+++ b/BaseballStats.Application/BaseballStats.Application.csproj
@@ -13,4 +13,8 @@
       <Folder Include="Services\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FastEndpoints" Version="5.31.0" />
+    </ItemGroup>
+
 </Project>
