--- a/BaseballStats.WebApi/BaseballStats.WebApi.csproj
+++ b/BaseballStats.WebApi/BaseballStats.WebApi.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastEndpoints" Version="5.31.0" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.31.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -23,10 +25,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BaseballStats.Infrastructure\BaseballStats.Infrastructure.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Endpoints\" />
     </ItemGroup>
 
 </Project>
