Feature: Create get games from a series endpoint
- Add RegisterServices static class for application dependency injections.
- Fix error with command handlers
- Add endpoint configurations, command handler, and validations
- Add GameDto record and GameMapper

Issue #5

--- a/BaseballStats.Application/BaseballStats.Application.csproj
+++ b/BaseballStats.Application/BaseballStats.Application.csproj
@@ -7,14 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs\" />
-      <Folder Include="Features\" />
-      <Folder Include="Mappings\" />
       <Folder Include="Services\" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="FastEndpoints" Version="5.31.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BaseballStats.Domain\BaseballStats.Domain.csproj" />
     </ItemGroup>
 
 </Project>
