--- a/BaseballStats.WebApi/BaseballStats.WebApi.csproj
+++ b/BaseballStats.WebApi/BaseballStats.WebApi.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BaseballStats.Application\BaseballStats.Application.csproj" />
       <ProjectReference Include="..\BaseballStats.Infrastructure\BaseballStats.Infrastructure.csproj" />
     </ItemGroup>
 
