--- a/BaseballStats.WebApi/BaseballStats.WebApi.csproj
+++ b/BaseballStats.WebApi/BaseballStats.WebApi.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FastEndpoints" Version="5.31.0" />
+        <PackageReference Include="FastEndpoints.Security" Version="5.31.0" />
         <PackageReference Include="FastEndpoints.Swagger" Version="5.31.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
