--- a/BaseballStats.WebApi/appsettings.json
+++ b/BaseballStats.WebApi/appsettings.json
@@ -3,6 +3,9 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=Baseball;Username=postgres;Password=wasd",
     "SupabaseConnection": "User Id=postgres.jtqpbsktmybgzxqujjsf;Password=yp4nBXaCMOwKpd1q;Server=aws-0-us-west-1.pooler.supabase.com;Port=5432;Database=postgres;"
   },
+  "Jwt": {
+    "SigningKey": "This is a secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
