Add Login endpoint
- Add login endpoint configuration and command handler
- Fix jwt signing key
- Add RegisteredUserDto

--- a/BaseballStats.WebApi/appsettings.json
+++ b/BaseballStats.WebApi/appsettings.json
@@ -4,7 +4,7 @@
     "SupabaseConnection": "User Id=postgres.jtqpbsktmybgzxqujjsf;Password=yp4nBXaCMOwKpd1q;Server=aws-0-us-west-1.pooler.supabase.com;Port=5432;Database=postgres;"
   },
   "Jwt": {
-    "SigningKey": "This is a secret key"
+    "SigningKey": "This is a very very very secret key, is not simple to guess it"
   },
   "Logging": {
     "LogLevel": {
