--- a/BaseballStats.Application/BaseballStats.Application.csproj
+++ b/BaseballStats.Application/BaseballStats.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="FastEndpoints" Version="5.31.0" />
+      <PackageReference Include="FastEndpoints.Security" Version="5.31.0" />
     </ItemGroup>
 
     <ItemGroup>
